se agrego comics

--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,7 @@
   --rojo: #E50914;
   --fondo: #141414;
 }
-*{
-  margin: 0;
-  padding:0;
-  box-sizing: border-box;
-}
+
 
 
 body{
@@ -16,10 +12,17 @@ body{
 
 
 }
+footer{
+  background-color: black;
+  text-align: center;
+  font-family: sans-serif;
+  color: white;
+  bottom: 0;
+}
 nav{
   display: flex;
   background-color: whitesmoke;
-  padding: 30px;
+  padding: 10px;
   text-align: center;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
@@ -28,31 +31,50 @@ nav{
   align-items: center;
 }
 nav a{
-  color:black;
+  outline: none;
   text-decoration: none;
-
+  display: inline-block;
+  width: 19.5%;
+  margin-right: 0.625%;
+  text-align: center;
+  line-height: 3;
+  color: black;
 }
+
 nav a:hover{
   color:red;
 }
 .icon-container{
-  width: 500px;
+  width: 40%;
   display:block;
   margin:auto;
+}
+h2{
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: large;
+  color: aliceblue;
 }
 /* ---------------------------------------------------- */
 .main_section{
   padding: 15%;
   text-align: center;
+}
+.personaje{ 
+text-align: center;
+
 
 }
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
-/*.contenedor{
+.content{
   width: 90%;
   margin:auto;
+  text-align: center;
 }
 
 
-
-}
-*/
